k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ciudad-analitica
  labels:
    app.kubernetes.io/part-of: ciudad-analitica
